--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/logo.png" sizes="32x32" media="(prefers-color-scheme: light)" />
+    <title>AioFauna</title>
   </head>
   <body>
     <div id="app"></div>
