--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/png" href="/logo.png" sizes="32x32" media="(prefers-color-scheme: light)" />
     <title>AioFauna</title>
+    <style>
+      body {
+        zoom: 90%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
